@@ -512,9 +512,10 @@ a {
 }
 
 .g-comment-box {
-    margin: 2px 5px;
+    margin: 10px 5px;
     width: 75%;
     border: 1px solid silver;
+    padding: 2px;
 }
 
 .g-comment-text-cell {
@@ -678,6 +679,12 @@ input:hover.g-button, input:focus.g-button {
 
 .g-emailMe-box input {
     margin: 1px;
+}
+
+.g-emailMe-box legend {
+	background-color: #fff2eb;
+	border-left: 1px solid #fdc;
+	border-right: 1px solid #fdc;
 }
 
 .g-columnheader, caption {
